css/styles.css
@font-face {
	font-family: 'Bebas Neue';
	font-style: normal;
	font-weight: normal;
	src: local('Bebas Neue'), url('../BebasNeue.woff') format('woff');
}
html {
	height: 100%;
}
body {
	padding-top: 120px;
	padding-bottom: 120px;
	font-family: 'Ubuntu', sans-serif;
	background-image: url("../img/what-the-hex.png");
}
/*
.navbar {
	width: 1000px;
	margin: auto;
}
*/
.nav-color{
    /*background: linear-gradient(135deg,#0fb8ad 20%,#1fc8db, #2cb5e8);*/
	/* background: linear-gradient(135deg, #ffffffc2 30%,#070564e0,#1c0469); */
	/*background: linear-gradient(135deg, #ffffffc2 30%,#070564e0,#310579); */
	background: linear-gradient(135deg, #ffffffc2 30%,#6463b6e0,#4a3074);
	box-shadow: 0px 8px 100px 0px #C1BFBF;
}

#myNavbar {
	font-family: 'Ubuntu', sans-serif;
}

.video-container {
	position:relative;
	padding-bottom:56.25%;
	padding-top:30px;
	height:0;
	overflow:hidden;
}

.video-container iframe, .video-container object, .video-container embed {
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
}

@media screen and (max-width: 756px) {
	.nav-color{
		background: linear-gradient(115deg, #ffffffc9 30%,#310579f1 0%);
		box-shadow: 0 0 8px;
	}
	
	.a-nav {
		width: 100%;
		text-decoration: none;
	}

	.a-nav:hover {
		color: black !important;
		background-color:#ffffff8f;
	}
}

.aboutHeader {
	color: #310579;
}

#submit {
	background-color: #310579;
	border: none;
	color: white;
	border-radius: 5px;
	font-size: 16px;
}

#slogan {
	color: white;
	text-align: center;
}

i {
	display: inline-block;
	color: white;
	padding-left:0.5em;
	font-size: 40px;
}

i:hover {
	color: #8429FF;
}

.footer {
	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
	box-sizing: border-box;
	width: 100%;
	text-align: center;

	padding: 45px;
	margin-top: 80px;
}

.footer .name{
	/*color:  #8f9296;*/
	font-size: 14px;
	margin: 0;
}

.footer .motto {
	/*color:  #8d9093;*/
	font-size: 24px;
	margin: 0;
}
@media (max-width: 600px) {

	.foooter{
		padding: 35px;
	}

	.footer .motto{
		font-size: 18px;
	}

	.footer .name{
		font-size: 12px;
	}

	.footer .links{
		font-size: 14px;
		padding: 25px 0 20px;
	}

	.footer .links a{
		line-height: 1.8;
	}
}

footer p {
	color: white;
	}

footer a {
	color: white;
}

footer a:link {
	text-decoration: none;
}

footer a:hover{
	color: #8429FF;
}

.fullscreen-bg {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    z-index: -100;
}

.fullscreen-bg__video {
    position: absolute;
    top: 105px;
    left: 0;
    width: 100%;
	height: 100%;
	z-index: -99;
}
@media (min-aspect-ratio: 16/9) {
	.fullscreen-bg__video {
	  width: 100%;
	  height: auto;
	}
  }
  
  @media (max-aspect-ratio: 16/9) {
	.fullscreen-bg__video {
	  width: auto;
	  height: 100%;
	}
}
.hidden {
	display: none;
}

.mainc {
	text-align: center;
}

.textcontainer p{
	color: white;
	font-family: 'Bebas Neue', 'Ubuntu', sans-serif;
	line-height: .8;
	font-size: 50pt;
	display: inline-block;
    text-align: left;
    position: relative;
    top: 50%;
    -ms-transform: translateY(-50%);
    -webkit-transform: translateY(-50%);
	transform: translateY(-50%);
	margin-top: 275px;
}

